--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "dev": "vite",
     "build:prod": "vite build",
     "build:stage": "vite build --mode staging",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .ts,.vue src",
+    "lint:fix": "eslint --ext .ts,.vue src --fix",
+    "format": "prettier --write ."
   },
   "repository": {
     "type": "git",
@@ -38,7 +41,13 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "5.2.4",
+    "@typescript-eslint/eslint-plugin": "8.41.0",
+    "@typescript-eslint/parser": "8.41.0",
     "@types/node": "22.15.18",
+    "eslint": "9.39.2",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-vue": "9.33.0",
+    "prettier": "3.6.2",
     "sass-embedded": "1.97.2",
     "typescript": "5.8.3",
     "unplugin-auto-import": "0.18.6",
