--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "strict": true,
+    "noImplicitAny": false,
+    "noImplicitThis": false,
     "jsx": "preserve",
     "resolveJsonModule": true,
     "isolatedModules": true,
